--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>吴炬的书城首页</title>
+<title>吴炬的书城首页1</title>
 <link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
@@ -21,7 +21,7 @@
 		<div id="book">
 			<div class="book_cond">
 				<form action="" method="get">
-					价格：<input id="min" type="text" name="min" value=""> 元 - 
+					价格是：<input id="min" type="text" name="min" value=""> 元 -
 						<input id="max" type="text" name="max" value=""> 元 
 						<input type="submit" value="查询" />
 				</form>
