hor-fix commit1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>吴炬的书城首页1</title>
+<title>吴炬的书城首页hot-fix</title>
 <link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
